Added More Configuration for the Generator - added FallOff - added out Directory - added Heightmap Filename - added Normalmap Filename - added Smoothing iteration amount Added first attempt at Square Step generation - doesnt work properly, probably because diamondStep is missing Added more Console Outputs

--- a/TerrainGenerator.vcxproj.filters
+++ b/TerrainGenerator.vcxproj.filters
@@ -45,4 +45,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="cfg.txt">
+      <Filter>Ressourcendateien</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
