--- a/TerrainGenerator.vcxproj
+++ b/TerrainGenerator.vcxproj
@@ -163,6 +163,9 @@
     <ClInclude Include="GeneratorConfigFile.h" />
     <ClInclude Include="PNGImage.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="cfg.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
