Added MeshMaker - writes geometry data from a height field to a simple  object file (sof) Fixed a Problem in PNGImage Adjusted Main Function to output a SOF-File

--- a/TerrainGenerator.vcxproj
+++ b/TerrainGenerator.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="FileReader.cpp" />
     <ClCompile Include="Generator.cpp" />
     <ClCompile Include="GeneratorConfigFile.cpp" />
+    <ClCompile Include="MeshMaker.cpp" />
     <ClCompile Include="PNGImage.cpp" />
     <ClCompile Include="TerrainGenerator.cpp" />
   </ItemGroup>
@@ -161,6 +162,7 @@
     <ClInclude Include="FileReader.h" />
     <ClInclude Include="Generator.h" />
     <ClInclude Include="GeneratorConfigFile.h" />
+    <ClInclude Include="MeshMaker.h" />
     <ClInclude Include="PNGImage.h" />
   </ItemGroup>
   <ItemGroup>
