--- a/TerrainGenerator.vcxproj.filters
+++ b/TerrainGenerator.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="PNGImage.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="MeshMaker.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PNGImage.h">
@@ -42,6 +45,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="FileReader.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshMaker.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
